updating both html and css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul class="main-nav">
-                <li><a href=""></li>
-                <li><a href="">Home</li>
-                <li><a href="">Products</li>
-                <li><a href="">Our Team</li>
+    <div class="container">
+        <nav class="navbar">
+            <ul>
+                <li class="push"><a href="">Logo</li>
+                <li><a href="#home">Home</li>
+                <li><a href="#pricing">Pricing</li>
+                <li><a href="#ourteam">Our Team</li>
+                <li><a href="#contactus">Contact Us</li>
             </ul>
         </nav>
-    </header>
+        <section id="home">
+            <h1>Welcome To Tikaz</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+        </section>
+        <section id="pricing">
+            <h1>Pricing</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+        </section>
+        <section id="ourteam">
+            <h1>Our Team</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+        </section>
+        <section id="contactus">
+            <h1>Contact Us</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+        </section>
+    </div>
 </body>
 </html>
