updating both html and css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav class="navbar">
             <ul>
                 <li class="push"><a href="">Logo</li>
-                <li><a href="#home">Home</li>
-                <li><a href="#pricing">Pricing</li>
-                <li><a href="#ourteam">Our Team</li>
-                <li><a href="#contactus">Contact Us</li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#ourteam">Our Team</a></li>
+                <li><a href="#contactus">Contact Us</a></li>
             </ul>
         </nav>
         <section id="home">
