updating html and css 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </nav>
         <section id="home">
             <h1>Welcome To Tikaz</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p> -->
+            <form action="" method="get">
+            <input type="email" value="" placeholder="Email"> <button>Subscribe</button>
+            </form>
         </section>
         <section id="pricing">
             <h1>Pricing</h1>
