updating html and css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <section id="home">
             <h1>Welcome To Tikaz</h1>
             <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p> -->
-            <form action="" method="get">
-            <input type="email" value="" placeholder="Email"> <button>Subscribe</button>
-            </form>
+            <form method="post">
+                <input type="email" placeholder="name@example.com" autocomplete="off" required><br>
+                <button type="submit">Subscribe</button>
+              </form>
         </section>
         <section id="pricing">
             <h1>Pricing</h1>
