updating html and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li class="push"><a href="">Logo</li>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#menu">Menu</a></li>
                 <li><a href="#ourteam">Our Team</a></li>
                 <li><a href="#contactus">Contact Us</a></li>
             </ul>
@@ -22,13 +22,79 @@
             <h1>Welcome To Tikaz</h1>
             <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p> -->
             <form method="post">
-                <input type="email" placeholder="name@example.com" autocomplete="off" required><br>
+                <input type="email" placeholder="Enter Email Address" autocomplete="off" required><br>
                 <button type="submit">Subscribe</button>
               </form>
         </section>
-        <section id="pricing">
-            <h1>Pricing</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+        <section id="menu">
+            <h1 class="push">Menu</h1>
+            <div class="menu-table">
+                <div class="col">
+                    <div class="table">
+                        <h2>Desserts Now</h2>
+                        <div class="price">
+                            $10
+                            <!-- <span>Per Month</span> -->
+                        </div>
+                        <ul>
+                            <li>Desserts ..........<strong>.......... $10</strong></li>
+                            <li>Desserts ..........<strong>.......... $10</strong></li>
+                            <li>Desserts ..........<strong>.......... $10</strong></li>
+                            <li>Desserts ..........<strong>.......... $10</strong></li>
+                        </ul>
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="table">
+                        <h2>Salad Here</h2>
+                        <div class="pop">Popular</div>
+                        <div class="price">
+                            $15
+                            <!-- <span>Per Month</span> -->
+                        </div>
+                        <ul>
+                            <li>Salad ..........<strong>.......... $15</strong></li>
+                            <li>Salad ..........<strong>.......... $15</strong></li>
+                            <li>Salad ..........<strong>.......... $15</strong></li>
+                            <li>Salad ..........<strong>.......... $15</strong></li>
+                        </ul>
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="table">
+                        <h2>Snacks Here</h2>
+                        <div class="price">
+                            $20
+                            <!-- <span>Per Month</span> -->
+                        </div>
+                        <ul>
+                            <li>Snacks ..........<strong>.......... $20</strong></li>
+                            <li>Snacks ..........<strong>.......... $20</strong></li>
+                            <li>Snacks ..........<strong>.......... $20</strong></li>
+                            <li>Snacks ..........<strong>.......... $20</strong></li>
+                        </ul>
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="table">
+                        <h2>Our Soup</h2>
+                        <div class="price">
+                            $25
+                            <!-- <span>Per Month</span> -->
+                        </div>
+                        <ul>
+                            <li>Soup ..........<strong>.......... $25</strong></li>
+                            <li>Soup ..........<strong>.......... $25</strong></li>
+                            <li>Soup ..........<strong>.......... $25</strong></li>
+                            <li>Soup ..........<strong>.......... $25</strong></li>
+                        </ul>
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="ourteam">
             <h1>Our Team</h1>
