--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,7 +28,7 @@
               </form>
         </section>
         <section id="menu">
-            <h1 class="push">Menu</h1>
+            <h1 class="heading">Menu</h1>
             <div class="menu-table">
                 <div class="col">
                     <div class="table">
@@ -37,10 +38,10 @@
                             <!-- <span>Per Month</span> -->
                         </div>
                         <ul>
-                            <li>Desserts ..........<strong>.......... $10</strong></li>
-                            <li>Desserts ..........<strong>.......... $10</strong></li>
-                            <li>Desserts ..........<strong>.......... $10</strong></li>
-                            <li>Desserts ..........<strong>.......... $10</strong></li>
+                            <li>Desserts ..........<strong>.......... $10</strong></li><br>
+                            <li>Desserts ..........<strong>.......... $10</strong></li><br>
+                            <li>Desserts ..........<strong>.......... $10</strong></li><br>
+                            <li>Desserts ..........<strong>.......... $10</strong></li><br>
                         </ul>
                         <a href="#">Buy Now</a>
                     </div>
@@ -54,10 +55,10 @@
                             <!-- <span>Per Month</span> -->
                         </div>
                         <ul>
-                            <li>Salad ..........<strong>.......... $15</strong></li>
-                            <li>Salad ..........<strong>.......... $15</strong></li>
-                            <li>Salad ..........<strong>.......... $15</strong></li>
-                            <li>Salad ..........<strong>.......... $15</strong></li>
+                            <li>Salad ..........<strong>.......... $15</strong></li><br>
+                            <li>Salad ..........<strong>.......... $15</strong></li><br>
+                            <li>Salad ..........<strong>.......... $15</strong></li><br>
+                            <li>Salad ..........<strong>.......... $15</strong></li><br>
                         </ul>
                         <a href="#">Buy Now</a>
                     </div>
@@ -70,10 +71,10 @@
                             <!-- <span>Per Month</span> -->
                         </div>
                         <ul>
-                            <li>Snacks ..........<strong>.......... $20</strong></li>
-                            <li>Snacks ..........<strong>.......... $20</strong></li>
-                            <li>Snacks ..........<strong>.......... $20</strong></li>
-                            <li>Snacks ..........<strong>.......... $20</strong></li>
+                            <li>Snacks ..........<strong>.......... $20</strong></li><br>
+                            <li>Snacks ..........<strong>.......... $20</strong></li><br>
+                            <li>Snacks ..........<strong>.......... $20</strong></li><br>
+                            <li>Snacks ..........<strong>.......... $20</strong></li><br>
                         </ul>
                         <a href="#">Buy Now</a>
                     </div>
@@ -86,10 +87,10 @@
                             <!-- <span>Per Month</span> -->
                         </div>
                         <ul>
-                            <li>Soup ..........<strong>.......... $25</strong></li>
-                            <li>Soup ..........<strong>.......... $25</strong></li>
-                            <li>Soup ..........<strong>.......... $25</strong></li>
-                            <li>Soup ..........<strong>.......... $25</strong></li>
+                            <li>Soup ..........<strong>.......... $25</strong></li><br>
+                            <li>Soup ..........<strong>.......... $25</strong></li><br>
+                            <li>Soup ..........<strong>.......... $25</strong></li><br>
+                            <li>Soup ..........<strong>.......... $25</strong></li><br>
                         </ul>
                         <a href="#">Buy Now</a>
                     </div>
@@ -97,12 +98,92 @@
             </div>
         </section>
         <section id="ourteam">
-            <h1>Our Team</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+            <div class="team-container">
+                <h1 class='heading'>Meet The Team</h1><br>
+                <div class="card-wrapper">
+                    <div class="card">
+                        <img src="images/toa-heftiba-195458-unsplash.jpg" alt="card background" class="card-img">
+                        <img src="images/jurica-koletic-317414-unsplash.jpg" alt="profile image" class="profile-img">
+                        <h1>Christian Bagley</h1>
+                        <p class="job-title">Founder</p>
+                        <p class="about">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, assumenda veniam sequi, officia labore vero quisquam numquam doloremque autem libero harum rerum! Magni vero optio tempora error, iure excepturi impedit!
+                        </p>
+                        <a href="#" class='btn'>Contact</a>
+                        <ul class="social-media">
+                            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                            <img src="images/toa-heftiba-195458-unsplash.jpg" alt="card background" class="card-img">
+                            <img src="images/sage-kirk-485982-unsplash.jpg" alt="profile image" class="profile-img">
+                            <h1>Erica Walters</h1>
+                            <p class="job-title">Manager</p>
+                            <p class="about">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, assumenda veniam sequi, officia labore vero quisquam numquam doloremque autem libero harum rerum! Magni vero optio tempora error, iure excepturi impedit!
+                            </p>
+                            <a href="#" class='btn'>Contact</a>
+                            <ul class="social-media">
+                                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                            </ul>
+                        </div>
+
+                        <div class="card">
+                                <img src="images/toa-heftiba-195458-unsplash.jpg" alt="card background" class="card-img">
+                                <img src="images/azamat-zhanisov-1270089-unsplash.jpg" alt="profile image" class="profile-img">
+                                <h1>Stephanie Garces</h1>
+                                <p class="job-title">Waiter</p>
+                                <p class="about">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, assumenda veniam sequi, officia labore vero quisquam numquam doloremque autem libero harum rerum! Magni vero optio tempora error, iure excepturi impedit!
+                                </p>
+                                <a href="#" class='btn'>Contact</a>
+                                <ul class="social-media">
+                                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                                </ul>
+                            </div>
+
+                            <div class="card">
+                                    <img src="images/toa-heftiba-195458-unsplash.jpg" alt="card background" class="card-img">
+                                    <img src="images/adult-beautiful-cute-1520760.jpg" alt="profile image" class="profile-img">
+                                    <h1>Kayden Kross</h1>
+                                    <p class="job-title">Waiter</p>
+                                    <p class="about">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, assumenda veniam sequi, officia labore vero quisquam numquam doloremque autem libero harum rerum! Magni vero optio tempora error, iure excepturi impedit!
+                                    </p>
+                                    <a href="#" class='btn'>Contact</a>
+                                    <ul class="social-media">
+                                        <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                                    </ul>
+                                </div>
+                </div>
+            </div>
         </section>
         <section id="contactus">
-            <h1>Contact Us</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod explicabo qui cumque quas minus.</p>
+                <div class="contact-section">
+                        <h1 class="heading">Contact Us</h1>
+                        <!-- <div class="border"></div> -->
+                        <form class="contact-form">
+                          <input type="text" class="contact-form-text" placeholder="Name">
+                          <input type="email" class="contact-form-text" placeholder="Email">
+                          <input type="text" class="contact-form-text" placeholder="Phone Number">
+                          <textarea class="contact-form-text" placeholder=""></textarea>
+                          <input type="submit" class="contact-form-btn" value="Send">
+                          
+                        </form>
+                      </div> 
         </section>
     </div>
 </body>
